@@ -3,6 +3,14 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-06-01:
+
+- New 'typeset' feature inspired by bash (and zsh and mksh): the -g flag
+  causes the specified variable(s) to be created globally, ignoring the
+  local scope of ksh functions or name spaces. For example, this allows
+  creating a global array or numeric variable from a ksh function.
+  Thanks to @ormaaj for the feature suggestion and to @hyenias for testing.
+
 2022-05-29:
 
 - Fixed a bug causing an inconsistent state after a special built-in command
